shellfirm/tests/snapshots/checks__base-bash_fork_bomb.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "base-bash_fork_bomb.yaml",
        test: ":(){ :|:& };:",
        check_detection_ids: [
            "base:bash_fork_bomb",
        ],
        test_description: "match command",
    },
]
