shellfirm/tests/snapshots/checks__fs-strict-folder_deletion.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "fs-strict-folder_deletion.yaml",
        test: "rmdir TestFolder",
        check_detection_ids: [
            "fs-strict:folder_deletion",
        ],
        test_description: "match command by finding existing file",
    },
    TestSensitivePatternsResult {
        file_path: "fs-strict-folder_deletion.yaml",
        test: "rmdir -pv TestFolder",
        check_detection_ids: [
            "fs-strict:folder_deletion",
        ],
        test_description: "match command with flags",
    },
    TestSensitivePatternsResult {
        file_path: "fs-strict-folder_deletion.yaml",
        test: "rmdir    -pv    TestFolder",
        check_detection_ids: [
            "fs-strict:folder_deletion",
        ],
        test_description: "match command with spaces",
    },
]
