shellfirm/tests/snapshots/checks__git-bisect.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "git-bisect.yaml",
        test: "git bisect start",
        check_detection_ids: [
            "git:bisect",
        ],
        test_description: "match bisect start",
    },
    TestSensitivePatternsResult {
        file_path: "git-bisect.yaml",
        test: "git bisect good",
        check_detection_ids: [
            "git:bisect",
        ],
        test_description: "match bisect good",
    },
    TestSensitivePatternsResult {
        file_path: "git-bisect.yaml",
        test: "git bisect bad",
        check_detection_ids: [
            "git:bisect",
        ],
        test_description: "match bisect bad",
    },
    TestSensitivePatternsResult {
        file_path: "git-bisect.yaml",
        test: "git bisect reset",
        check_detection_ids: [
            "git:bisect",
        ],
        test_description: "match bisect reset",
    },
]
