shellfirm/tests/snapshots/checks__git-clean_force.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "git-clean_force.yaml",
        test: "git clean -fd",
        check_detection_ids: [
            "git:clean_force",
        ],
        test_description: "match force clean command",
    },
    TestSensitivePatternsResult {
        file_path: "git-clean_force.yaml",
        test: "git clean -fdx",
        check_detection_ids: [
            "git:clean_force",
        ],
        test_description: "match force clean command with x option",
    },
]
