shellfirm/tests/snapshots/checks__git-filter_branch.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "git-filter_branch.yaml",
        test: "git filter-branch --env-filter",
        check_detection_ids: [
            "git:filter_branch",
        ],
        test_description: "match filter-branch command",
    },
    TestSensitivePatternsResult {
        file_path: "git-filter_branch.yaml",
        test: "git filter-branch --force",
        check_detection_ids: [
            "git:filter_branch",
        ],
        test_description: "match filter-branch with force",
    },
]
