shellfirm/tests/snapshots/checks__git-strict-add_all.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "git-strict-add_all.yaml",
        test: "git add .",
        check_detection_ids: [
            "git-strict:add_all",
        ],
        test_description: "match add all files",
    },
    TestSensitivePatternsResult {
        file_path: "git-strict-add_all.yaml",
        test: "git add -A",
        check_detection_ids: [
            "git-strict:add_all",
        ],
        test_description: "match add all files with -A",
    },
]
