shellfirm/tests/snapshots/checks__git-strict-rebase.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "git-strict-rebase.yaml",
        test: "git rebase main",
        check_detection_ids: [
            "git-strict:rebase",
        ],
        test_description: "match basic rebase",
    },
    TestSensitivePatternsResult {
        file_path: "git-strict-rebase.yaml",
        test: "git rebase",
        check_detection_ids: [
            "git-strict:rebase",
        ],
        test_description: "match rebase without branch",
    },
]
